SQLAlchemy 不再输出日志, 优化预测时的日志输出, 修复 RawReport 保存至本地的功能

--- a/logging.yml
+++ b/logging.yml
@@ -25,7 +25,18 @@ handlers:
     filename: logs/error.log
     maxBytes: 10240
     backupCount: 3
+#  sqlalchemy:
+#    class: logging.handlers.TimedRotatingFileHandler
+#    formatter: default
+#    level: DEBUG
+#    filename: logs/sqlalchemy.log
+#    when: midnight
+#    interval: 1
+#    backupCount: 31
 loggers:
   client:
     level: DEBUG
     handlers: [console, file, error]
+#  sqlalchemy:
+#    level: DEBUG
+#    handlers: [sqlalchemy]
